# note

./: .gitignore  AGENTS.md  Cargo.toml  README.md  components.json  electrobun.config.ts  package.json  playwright.config.ts  rustra.json  tsconfig.json  vite.config.ts
crates/note-bridge/: Cargo.toml
crates/note-bridge/src/: lib.rs  main.rs
crates/note-core/: Cargo.toml
crates/note-core/src/: block_write.rs  database.rs  documents.rs  lib.rs  page_archive.rs  page_history.rs  page_write.rs  search.rs
crates/note-engine/: Cargo.toml
crates/note-engine/src/: api.rs  main.rs
docs/plans/: 2026-05-03-notion-gap-closing-design.md  2026-05-03-notion-gap-closing-plan.md  2026-05-13-rustra-integration-design.md  2026-05-13-rustra-integration-plan.md
scripts/: dev.ts
src-tauri/: tauri.conf.json
src/bun/: database.ts  engineBoundary.test.ts  index.ts  mainviewUrl.test.ts  mainviewUrl.ts  migrations.ts  navigationMouseButtons.test.ts  navigationMouseButtons.ts  notes.test.ts  notes.ts  rpcValidation.test.ts  rpcValidation.ts  schema.ts
src/bun/engine/: engineClient.test.ts  engineClient.ts  engineProcess.test.ts  engineProcess.ts
src/bun/repositories/: blockMoveRepository.ts  blockOrdering.ts  blockProps.ts  blockReadRepository.ts  blockRepository.ts  noteOperations.ts  noteRows.ts  pageArchiveRepository.ts  pageLinkRepository.ts  (+4 more)
src/mainview/: index.html  index.tsx  style.css
src/shared/: blockProps.ts  contracts.ts  engineClient.test.ts  linkSanitization.ts  pageConnections.ts  pageDisplay.ts  rpcValidation.test.ts
tests/e2e/: editor-flow.pw.ts
(+219 files in other folders)
