[package]
name = "note-bridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "note-bridge-generate"
path = "src/main.rs"

[dependencies]
note-core = { path = "../note-core" }
rustra = { path = "../../../rustra-bridge/crates/rustra" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"

[dev-dependencies]
tempfile = "3"
